# wp2-redteam

./: .dockerignore  .gitattributes  .gitignore  README.md  pyproject.toml
agent_image/: Dockerfile  requirements.txt
agent_image/app/: __init__.py  protocol.py  rpc_client.py  runtime.py  server.py
config/: default.yaml  fuzzer-default.yaml  fuzzer-server.example.yaml  mutation-operators.yaml  risk-scope-week3.yaml  risk-taxonomy.yaml  target-profiles.yaml
deploy/: .env.server.example  docker-compose.server.yaml
docs/: README.md  server-deployment.md
docs/architecture/: 总体开发文档.md
docs/plans/: 第一周开发文档.md  第三周开发文档.md  第二周开发文档.md  第五周开发文档.md  第四周开发文档.md
docs/setup/: 开发环境指南.md
reports/: week1-e2e-summary.md
scripts/: benchmark_startup.py  lock_target_profile.py  pull_and_lock_model.sh  server_preflight.sh  verify_target_profile.py
src/sandbox/: __init__.py  cli.py  config.py  errors.py  identifiers.py  models.py  protocol.py  tool_contracts.py  versions.py
tests/: conftest.py
tests/e2e/: test_coverage_lifecycle.py  test_mutation_lifecycle.py  test_replay_lifecycle.py  test_sandbox_lifecycle.py
tests/integration/: test_coverage_cli.py  test_coverage_pipeline.py  test_execution_engine.py  test_fuzzer_cli.py  test_fuzzer_lifecycle.py  test_mutation_cli.py  test_replay_recording_engine.py  test_runtime_api.py
tests/unit/: test_artifact_transfer.py  test_behavior_features.py  test_behavior_risk_correlation.py  test_controlled_tools.py  test_coverage_input.py  test_coverage_store.py  test_coverage_taxonomy.py  test_docker_scheduler_config.py  (+27 more)
(+109 files in other folders)
