[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-g-wp2-redteam"
version = "0.1.0"
description = "TRACE-G week-one isolated Agent red-team execution sandbox"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "docker>=7.0,<8",
    "fastapi>=0.115,<1",
    "langgraph>=0.2,<1",
    "pydantic>=2.6,<3",
    "PyYAML>=6,<7",
    "structlog>=24,<26",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<7",
    "ruff>=0.4,<1",
]

[project.scripts]
trace-redteam = "sandbox.cli:main"
trace-redteam-week1 = "sandbox.cli:main"
trace-redteam-week2 = "sandbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src", "agent_image"]
asyncio_mode = "auto"
addopts = "-q --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
